--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,8 @@ body {
 }
 
 nav {
-    position: absolute;
+    z-index: 1;
+    position: fixed;
     width: 100%;
     height: 64px;
     background-color: white;
@@ -54,3 +55,9 @@ nav li:hover {
     color: gray;
     background-color: black;
 }
+
+.container {
+    position: relative;
+    top: 64px;
+}
+
